# rust-learning

./: .editorconfig  .gitignore  .tokeignore  Cargo.toml  build.rs  cliff.toml  deny.toml
demo/: Cargo.toml
demo/src/: jr_str.rs  lib.rs
docker-pgsql/: docker-compose.yaml
examples/: auto_macros.rs  axum_serde.rs  axum_tracing.rs  builder.rs  chat_server.rs  enum_from_darling.rs  enum_from_macros.rs  grpc_client.rs  grpc_server.rs  j_ready.rs  j_try.rs  j_vec.rs  matrix_multiply.rs  metrics_demo.rs  serde.rs  serde_impl.rs  simple_concurrency_demo.rs  sqlx.rs  tokio.rs
examples/http_client/: sqlx_test.http
grep/: Cargo.toml
grep/src/: error.rs  lib.rs  main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
logs/: rust-learning.log.2024-09-03  rust-learning.log.2024-09-05
protos/: demo.proto
queryer/: Cargo.toml
queryer/examples/: covid.rs  dialect.rs
queryer/src/: covert.rs  dialect.rs  lib.rs  main.rs
src/: auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs  main.rs
src/pb/: demo.rs
thumbor/: Cargo.toml  abi.proto  build.rs
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
