[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
syn = { version = "2.0.77", features = ["extra-traits"] }

[dev-dependencies]
futures = "0.3.30"
oneshot = "0.1.8"
rand = "0.9.0-alpha.2"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tracing-appender = "0.2.3"
