[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.9.0"
syn = { version = "2.0.77", features = ["extra-traits"] }

[dev-dependencies]
futures = "0.3.30"
oneshot = "0.1.8"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "std",
] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tracing-appender = "0.2.3"
opentelemetry = { version = "0.27.1", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.27.0", features = [
    "tonic",
    "metrics",
    "logs",
] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = [
    "semconv_experimental",
] }
opentelemetry-appender-tracing = "0.27.0"
derive_builder = "0.20.1"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
http = "1.1.0"
bytes = "1.7.2"
blake3 = "1.5.4"
dashmap = "6.1.0"
console-subscriber = "0.4.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
nanoid = "0.4.0"
once_cell = "1.20.2"
