[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "dialect"

[[example]]
name = "covid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.77"
sqlparser = "0.44.0"
polars = { version = "0.38.2", features = ["json", "lazy"] }
reqwest = { version = "0.11.26", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.36.0", features = ["fs"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["full"] }
