[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
prost = "0.12.3"
bytes = "1.5.0"
base64 = "0.22.0"
image = "0.23.14"
photon-rs = "0.3.2"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
percent-encoding = "2.3.1"
serde = { version = "1", features = ["derive"] }
lru = "0.12.3"
reqwest = { version = "0.11.25", default-features = false, features = ["json", "rustls-tls"]}
lazy_static = "1.4.0"

[build-dependencies]
prost-build = "0.12.3"
